# coreq

./: .gitignore  meson.build  meson_options.txt  reproduce_substring  reproduce_substring.cc  test_levenshtein  test_levenshtein.cc
manpage/: en-coreq.1.in
src/: coreq-diff.cc  coreq-drop-permissions.cc  coreq-etcat.sh.in  coreq-functions.sh.in  coreq-header.cc  coreq-installed-after.sh.in  coreq-installed.sh.in  coreq-postsync.sh.in  coreq-remote.sh.in  coreq-sync.sh.in  coreq-test-obsolete.sh.in  coreq-update.cc  coreq.cc  masked-packages.cc  q.cc  versionsort.cc
src/cache/: base.cc  base.h  cache_map.h  cachetable.cc  cachetable.h  generate_cachemap.sh
src/cache/common/: assign_reader.cc  assign_reader.h  ebuild_exec.cc  ebuild_exec.h  flat_reader.cc  flat_reader.h  reader.h  selectors.cc  selectors.h
src/cache/coreqcache/: coreqcache.cc  coreqcache.h
src/cache/metadata/: metadata.cc  metadata.h
src/cache/parse/: parse.cc  parse.h
src/cache/sqlite/: sqlite.cc  sqlite.h
src/corepkg/: basicversion.cc  basicversion.h  depend.cc  depend.h  eapi.cc  eapi.h  extendedversion.cc  extendedversion.h  extendedversion_bin.cc  instversion.cc  instversion.h  keywords.cc  keywords.h  mask.cc  mask.h  mask_list.cc  mask_list.h  overlay.cc  overlay.h  overlay_bin.cc  package.cc  package.h  package_best.cc  packagesets.cc  packagesets.h  packagetree.cc  packagetree.h  set_stability.cc  set_stability.h  vardbpkg.cc  vardbpkg.h  version.cc  version.h  version_output.cc
src/corepkg/conf/: cascadingprofile.cc  cascadingprofile.h  corepkgsettings.cc  corepkgsettings.h
src/coreqTk/: ansicolor.cc  ansicolor.h  ansicolor_print.cc  argsreader.cc  argsreader.h  assert.h  attribute.h  auto_array.h  compare.cc  compare.h  coreqarray.h  coreqint.h  diagnostics.h  dialect.h  filenames.cc  filenames.h  formated.cc  formated.h  forward_list.h  i18n.h  inttypes.h  iterate_map.h  iterate_set.h  likely.h  md5.cc  md5.h  null.h  outputstring.cc  outputstring.h  parseerror.cc  parseerror.h  percentage.cc  percentage.h  ptr_container.h  ptr_iterator.h  regexp.cc  regexp.h  statusline.cc  statusline.h  stringlist.cc  (+13 more)
src/coreqrc/: 00-coreqrc.in  coreqrc.cc  coreqrc.h  coreqrc_corepkg.cc  def_i18n.cc  defaults.cc  global.cc  global.h  global1.cc  global2.cc  global3.cc  global4.cc  global5.cc  global6.cc  globals.cc  globals.h
src/database/: header.cc  header.h  header_corepkg.cc  io.cc  io.h  io_corepkg.cc  io_header.cc  package_reader.cc  package_reader.h
src/main/: main.cc  main.h  main_all.cc  main_all_tools.cc  main_coreq.cc  main_diff.cc  main_drop_permissions.cc  main_masked_packages.cc  main_output.cc  main_overlay.cc  main_q.cc  main_update.cc  main_update_tools.cc  main_versionsort.cc
src/output/: coreq-proto.cc  coreq.proto  formatstring-print.cc  formatstring-print.h  formatstring.cc  formatstring.h  print-formats.h  print-proto.cc  print-proto.h  print-xml.cc  print-xml.h
src/search/: algorithms.cc  algorithms.h  levenshtein.cc  levenshtein.h  matchtree.cc  matchtree.h  nowarn.cc  nowarn.h  packagetest.cc  packagetest.h  packagetest_default.cc  redundancy.h
src/various/: cli.cc  cli.h  dispatch.cc  dispatch.h  drop_permissions.cc  drop_permissions.h  subcommand.h  subcommand_belongs.h  subcommand_check.h  subcommand_depends.h  subcommand_depgraph.h  subcommand_files.h  subcommand_has.h  subcommand_hasuse.h  subcommand_keywords.h  subcommand_list.h  subcommand_meta.h  subcommand_regen.h  subcommand_size.h  subcommand_uses.h  subcommand_which.h
tests/: meson.build  test_algorithms.cc  test_ansicolor.cc  test_argsreader.cc  test_cache_base.cc  test_cache_readers.cc  test_compare.cc  test_corepkg_version.cc  test_corepkgsettings.cc  test_corepkgsettings_no_heap_statics.sh  test_coreqcache_no_heap_statics.sh  test_coreqrc_defaults.cc  test_database_io.cc  test_db_header.cc  test_depend.cc  test_eapi.cc  test_eapi_no_heap_statics.sh  test_ebuild_exec_no_heap_statics.sh  test_ebuild_exec_safe_buffers.sh  test_extendedversion.cc  test_filenames.cc  test_formated.cc  test_formatstring.cc  test_formatstring_print.cc  test_instversion.cc  test_keywords.cc  test_levenshtein.cc  test_mask.cc  test_mask_list_no_heap_statics.sh  test_matchtree.cc  test_md5.cc  test_output_cli_format.sh  test_outputstring.cc  test_overlay.cc  test_package.cc  test_package_best.cc  test_packagesets.cc  test_packagetest.cc  test_packagetree.cc  test_parseerror.cc  (+10 more)
tmpfiles.d/: coreq.conf
